# nagatoro

./: .gitignore  Cargo.toml  README.md
conf/: cfg_dev.yaml  cfg_prod.yaml  cfg_test.yaml
src/: cmn.rs  config.rs  custom_log.rs  db.rs  entity.rs  kafka_listener.rs  lib.rs  log.rs  logic.rs  main.rs
tests/: playload_test.rs
