[package]
name = "nagatoro"
version = "0.1.0"
edition = "2021"

[features]
dev= []
pdt = []
test = []
default = ["dev"]

[profile.dev]
features = ["dev"]
[profile.test]
features = ["test"]
[profile.release]
features = ["pdt"]

[dependencies]
config = { version = "0.13.3" }
dotenv = { version = "0.15.0" }
rdkafka = { version = "0.36.0", features = ["tokio", "cmake-build"] }
tokio = { version = "1.34.0", features = ["full","rt-multi-thread","macros"] }
tokio-test = {version = "0.4.3"}
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql","chrono","time","bigdecimal","json","macros"] }
serde = { version = "1.0.192", features = ["std","derive"] }
futures = { version = "0.3.29" }
log4rs = { version = "1.2.0" , features = ["all_components"]}
log = { version = "0.4.20" }
serde_json = "1.0.108"
base64 = { version = "0.21.5" }
md-5 = { version = "0.10.6" }
strum_macros = { version = "0.25.3" }
num-traits = { version = "0.2.17" }
toml = { version = "0.8.8" }